formatted images and fixed a couple of alignment issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,13 +97,13 @@ header h1 {
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  gap: 30px;
+  gap: 1.8rem;
 }
 section {
   margin-top: 1.5rem;
   background-color: var(--secondary);
   border-radius: 8px;
-  padding: 1rem 5rem 1.5rem 1.5rem;
+  padding: 1rem 3rem 1rem 2rem;
   box-shadow: rgba(13, 2, 34, 0.16) 0px 10px 36px 0px,
     rgba(13, 2, 34, 0.06) 0px 0px 0px 1px;
   /* 13, 2, 34 */
@@ -118,6 +118,7 @@ main .picture-container {
   background-color: transparent;
   box-shadow: none;
   padding: 0;
+  align-self: center;
   /* border: 1px solid black; */
 }
 
@@ -126,7 +127,7 @@ main .picture-container {
   /* width: 100%; */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: center;
+  /* align-items: center; */
   grid-row: 400px;
   /* gap: 1rem; */
 
@@ -149,9 +150,12 @@ main .toolbox {
 }
 
 /* toolbox */
-section .toolbox-grid-container {
+main .toolbox-grid-container {
+  display: grid;
   grid-template-columns: repeat(6, 1fr);
+  gap: 0.8rem;
+  justify-content: center;
 }
-section .toolbox-grid-container .icon {
+main .toolbox-grid-container > .icon {
   /* background-color: red; */
 }
